finalize usage of NGRX

--- a/anmeldetool-web/src/main/web/src/app/core/component/nav/nav.component.html
+++ b/anmeldetool-web/src/main/web/src/app/core/component/nav/nav.component.html
@@ -84,7 +84,7 @@
     </mat-nav-list>
     <mat-nav-list class="list-horizontal">
       <mat-list-item
-        routerLink=""
+        routerLink="/user/user"
         routerLinkActive="active"
         [routerLinkActiveOptions]="{ exact: true }"
         matRipple
