--- a/anmeldetool-web/src/main/web/src/app/events/events-detail/anlass-detail/anlass-detail.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/events-detail/anlass-detail/anlass-detail.component.html
@@ -23,6 +23,6 @@
 <div class="row">
   <div class="col-sm-3">Ort: {{ anlass.ort }}</div>
   <div class="col-sm-3">Halle: {{ anlass.halle }}</div>
-  <div class="col-sm-3">Organisator: {{ anlass.organisator }}</div>
+  <div class="col-sm-3">Organisator: {{ organisator?.name }}</div>
   <div class="col-sm-3">IBAN: {{ anlass.iban }}</div>
 </div>
