--- a/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.html
@@ -169,7 +169,11 @@
   </div>
 -->
 
-  <!--
+  <app-wertungsrichter-selektion
+    [anlass]="anlass"
+  ></app-wertungsrichter-selektion>
+
+  <!-- neu Wertungsrichter Selektion
   <div class="row">
     <h3 class="padding">Wertungsrichter</h3>
   </div>
