--- a/anmeldetool-web/src/main/web/src/app/events/event-thumbnail/event-thumbnail.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/event-thumbnail/event-thumbnail.component.html
@@ -8,7 +8,7 @@
   (click)="isEnabled() ? handleClickMe($event) : $event.stopPropagation()"
 >
   <div class="row">
-    <div class="col-sm-7">
+    <div class="col-sm-7 double-hight">
       <h2>{{ anlass.getCleaned() }}</h2>
     </div>
     <div class="col-sm-1">
@@ -56,7 +56,7 @@
   <div class="row">
     <div class="col-sm-4">Ort: {{ anlass.ort }}</div>
     <div class="col-sm-4">Halle: {{ anlass.halle }}</div>
-    <div class="col-sm-4">Organisator: {{ anlass.organisator }}</div>
+    <div class="col-sm-4">Organisator: {{ organisator?.name }}</div>
   </div>
 
   <div *ngIf="anlassSummary.startet" class="row">
