--- a/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-grid/teilnehmer-grid.css
+++ b/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-grid/teilnehmer-grid.css
@@ -26,16 +26,20 @@ body {
   margin-top: 50px;
   display: inline-block;
 }
-.mat-fab {
+.mat-fab-pos1 {
   font-size: 12px;
-  right: 15px;
+  right: 80px;
   top: 62px;
   left: auto;
   position: absolute;
 }
 
-.mat-fab2 {
-  right: 85px;
+.mat-fab-pos2 {
+  font-size: 12px;
+  right: 15px;
+  top: 62px;
+  left: auto;
+  position: absolute;
 }
 
 .mat-fab3 {
