fixes an start of new redux AnlassSummary

--- a/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.html
@@ -175,6 +175,7 @@
   <app-wertungsrichter-selektion
     *ngIf="vereinStartet"
     [anlass]="anlass"
+    [anlassSummary]="anlassSummary"
   ></app-wertungsrichter-selektion>
 
   <!-- neu Wertungsrichter Selektion
