--- a/anmeldetool-web/src/main/web/src/app/verein/user-form/user-form.component.html
+++ b/anmeldetool-web/src/main/web/src/app/verein/user-form/user-form.component.html
@@ -23,7 +23,7 @@
       </app-role>
       <app-wertungsrichter
         *ngIf="isWertungsrichter()"
-        [currentUser]="user"
+        [currentUser]="currentUser"
         [(wertungsrichter)]="wertungsrichter"
         [isVereinsAnmelder]="isVereinsAnmelder"
         [isVereinsVerantwortlicher]="isVereinsVerantwortlicher"
