--- a/anmeldetool-web/src/main/web/src/app/rechnungsbuero/erfassen/erfassen.component.html
+++ b/anmeldetool-web/src/main/web/src/app/rechnungsbuero/erfassen/erfassen.component.html
@@ -1,7 +1,4 @@
-<div class="container-fluid">
-  <div class="row">
-    <h1>{{ title }}</h1>
-  </div>
+<div class="container-fluid toppadding">
   <div class="row">
     <div class="col-2">
       <app-anlass-status
@@ -62,13 +59,7 @@
             </div>
 
             <div *ngIf="sprung" class="col-1 centered">Note 1</div>
-            <!--div *ngIf="sprung && !modeErfassen" class="col-1 centered">
-              Note 1
-            </div-->
             <div *ngIf="sprung" class="col-1 centered">Note 2</div>
-            <!--div *ngIf="sprung && !modeErfassen" class="col-1 centered">
-              Note 2
-            </div-->
             <div class="col-1 centered">gespeichert</div>
             <div class="col-1 centered">geprüft</div>
           </div>
