--- a/anmeldetool-web/src/main/web/src/app/verein/user-form/user-form.component.html
+++ b/anmeldetool-web/src/main/web/src/app/verein/user-form/user-form.component.html
@@ -13,7 +13,7 @@
         (valid)="updateUserValid($event)"
       ></app-user>
     </div>
-    <div class="col-6">
+    <div class="col-6" [hidden]="isUserDirty()">
       <app-role
         [currentUser]="currentUser"
         [isVereinsAnmelder]="isVereinsAnmelder"
